--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head?>
+    <head>
         <title>Welcome To Bill-t Differently</title>
     </head>
     <body>
+        <h1>Welcome To Bill-t Differently</h1>
         <button onclick="redirectGetStarted()">Get Started</button>
         <button onclick="redirectInfoPage()">What is a Proposition</button>
         <button onclick="redirectLetterPage()">Write a Letter</button>
@@ -14,7 +15,18 @@
 
 
         <script>
-        
+            function redirectGetStarted()
+            {
+                window.location.href = 'proposition.html';
+            }
+            function redirectInfoPage()
+            {
+                window.location.href = 'propositionfaq.html';
+            }
+            function redirectLetterPage()
+            {
+                window.location.href = 'writeletter.html';
+            }
         </script>
     </body>
 </body>
