add new html files and do all button redirection

--- a/proposition.html
+++ b/proposition.html
@@ -1,9 +1,9 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	  <meta name="viewport" content="width=device-width, initial-scale=1" />
+	    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
       <!-- link the webpage's stylesheet -->
       <link rel="stylesheet" href="/propstyle.css" />
@@ -20,16 +20,22 @@
 
     <script>
         function goToProp1() {
+            window.location.href = 'prop1.html';
         }
         function goToProp2() {
+            window.location.href = 'prop1.html';
         }
         function goToProp3() {
+            window.location.href = 'prop1.html';
         }
         function goToProp4() {
+            window.location.href = 'prop1.html';
         }
         function goToProp5() {
+            window.location.href = 'prop1.html';
         }
         function goToProp6() {
+            window.location.href = 'prop1.html';
         }
     </script>
 
