--- a/homepage.html
+++ b/homepage.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome To Bill-t Differently</title>
+        <link rel="stylesheet" type = "text/css" href="homepage.css">
+        <title> Welcome To Bill-t Differently</title>
     </head>
     <body>
-        <h1>Welcome To Bill-t Differently</h1>
+        <h1 class="intro">Welcome To Bill-t Differently</h1>
+        <div class = "buttons">
         <button onclick="redirectGetStarted()">Get Started</button>
         <button onclick="redirectInfoPage()">What is a Proposition</button>
         <button onclick="redirectLetterPage()">Write a Letter</button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" 
+        </div>
+        <img class = "pelican" src="https://i.pinimg.com/originals/0a/46/12/0a4612a9f4dd84ec6eda99cee3954062.jpg"
         alt="Pelican Voting Guy"/>
 
 
