Added all html redirection

--- a/prop1.html
+++ b/prop1.html
@@ -4,10 +4,17 @@
       <!-- link the webpage's stylesheet -->
       <link rel="stylesheet" href="propstyle.css">
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&display=swap" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
 
     <body>
-        <div class = "contents">
+        <div id = "nav-placeholder">    
+        </div>
+        <script>
+           $(function(){
+            $("#nav-placeholder").load("directory.html");
+           })
+        </script>
         <h1 class = "hey">Proposition 1</h1>
         <h2>About the Proposition</h2>
         <h3> blah blah</h3>
