--- a/prop6.html
+++ b/prop6.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
 
     <body>
+        <div id = "nav-placeholder">    
+        </div>
+        <script>
+           $(function(){
+            $("#nav-placeholder").load("directory.html");
+           })
+        </script>
         <div class = "contents">
         <h1>Proposition 1</h1>
         <h2>About the Proposition</h2>
