--- a/propositionfaq.html
+++ b/propositionfaq.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
 
     <body>
+        <div id = "nav-placeholder">    
+        </div>
+        <script>
+           $(function(){
+            $("#nav-placeholder").load("directory.html");
+           })
+        </script>
+
         <h1>This is what a proposition is</h1>
         <h2>blah blah</h2>
     </body>
