--- a/writeletter.html
+++ b/writeletter.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
 
     <body>
+        <div id = "nav-placeholder">    
+        </div>
+        <script>
+           $(function(){
+            $("#nav-placeholder").load("directory.html");
+           })
+        </script>
+
+
         <div class = "contents">
         <h1>Include Sneha Code to write letter</h1>
         </div>
