--- a/writeletter.html
+++ b/writeletter.html
@@ -104,6 +104,18 @@
         templateOption3.addEventListener("click", function () {
             templateDropdownBtn.textContent = "Proposition 3";
         });
+
+        templateOption3.addEventListener("click", function () {
+            templateDropdownBtn.textContent = "Proposition 4";
+        });
+
+        templateOption3.addEventListener("click", function () {
+            templateDropdownBtn.textContent = "Proposition 5";
+        });
+
+        templateOption3.addEventListener("click", function () {
+            templateDropdownBtn.textContent = "Proposition 6";
+        });
     </script>
 </body>
 </html>
