--- a/proposition.html
+++ b/proposition.html
@@ -22,14 +22,15 @@
         </script>
 
         
-        <h1> Learn about the propositions here</h1>
-        <button onclick="goToProp1()"> 1</button>
-        <button onclick="goToProp2()"> 2</button>
-        <button onclick="goToProp3()"> 3</button>
-        <button onclick="goToProp4()"> 4</button>
-        <button onclick="goToProp5()"> 5</button>
-        <button onclick="goToProp6()"> 6</button>
-
+        <h1 class="title1"> Learn about the propositions here</h1>
+        <div class="button">
+            <button onclick="goToProp1()"> 1</button>
+            <button onclick="goToProp2()"> 2</button>
+            <button onclick="goToProp3()"> 3</button>
+            <button onclick="goToProp4()"> 4</button>
+            <button onclick="goToProp5()"> 5</button>
+            <button onclick="goToProp6()"> 6</button>
+        </div>
     <script>
         function goToProp1() {
             window.location.href = 'prop1.html';
