add class to props

--- a/prop2.html
+++ b/prop2.html
@@ -14,11 +14,11 @@
         </script>
 
         <div class = "contents">
-        <h1>Proposition 1</h1>
-        <h2>About the Proposition</h2>
-        <h3> blah blah</h3>
-        <h2>Pros and Cons</h2>
-        <h3> blah blah</h3>
+            <h1 class = "title">Proposition 1</h1>
+            <h2 class = "about_header">What is Proposition 1?</h2>
+            <h3 class = "description">Proposition 1 is about...</h3>
+            <h2 class = "pros_header">Pros and Cons</h2>
+            <h3 class = "pros_and_cons">Pros of Proposition 1 include...</h3>
         </div>
     </body>
 
