--- a/homepage.html
+++ b/homepage.html
@@ -5,15 +5,18 @@
         <title> Welcome To Bill-t Differently</title>
     </head>
     <body>
-        <h1 class="intro">Welcome To Bill-t Differently</h1>
-        <div class = "buttons">
-        <button onclick="redirectGetStarted()">Get Started</button>
-        <button onclick="redirectInfoPage()">What is a Proposition</button>
-        <button onclick="redirectLetterPage()">Write a Letter</button>
+        <div class = "everything">
+            <h1 class="intro">Welcome To Bill-t Differently</h1> 
+                <div class="imageContainer">
+                    <div class = "buttons">
+                        <button onclick="redirectGetStarted()">Get Started</button>
+                        <button onclick="redirectInfoPage()">What is a Proposition</button>
+                        <button onclick="redirectLetterPage()">Write a Letter</button>
+                    </div>
+                    <img class = "scroll" src="https://www.freeiconspng.com/uploads/scroll-background-png-8.png">
+                    <img class = "voted" src="https://blogs.sas.com/content/sastraining/files/2018/11/i_voted-3.png">
+                </div>
         </div>
-        <img class = "pelican" src="https://i.pinimg.com/originals/0a/46/12/0a4612a9f4dd84ec6eda99cee3954062.jpg"
-        alt="Pelican Voting Guy"/>
-
 
 
 
@@ -27,7 +30,7 @@
                 window.location.href = 'propositionfaq.html';
             }
             function redirectLetterPage()
-            {r3br
+            {
                 window.location.href = 'writeletter.html';
             }
         </script>
