Fix Index.html redirection bug

--- a/directory.html
+++ b/directory.html
@@ -13,7 +13,7 @@
     <div id="unique-container">
         <div class="navbar">
             <div class="buttons">
-                <button onclick="redirect('homepage.html')">Home</button>
+                <button onclick="redirect('index.html')">Home</button>
                 <button onclick="redirect('proposition.html')">Propositions</button>
                 <button onclick="redirect('propositionfaq.html')">Info</button>
                 <button onclick="redirect('writeletter.html')">Email</button>
