--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type = "text/css" href="homepage.css">
+        <link rel="stylesheet" type = "text/css" href="index.css">
         <title> Welcome To Bill-t Differently</title>
         <script defer>
             // Your redirection functions here
