--- a/prop1.html
+++ b/prop1.html
@@ -30,6 +30,11 @@
           <div class = "text_info_main">Main</div>
           <div class = "text_info_points">Points</div>
         </button>
+
+        
+
+        <img class="bill" src="./5b940cd2-00ec-4717-a7fc-e056ff3c8000 2.png">
+
       
     </body>
 
