css for prop page

--- a/proposition.html
+++ b/proposition.html
@@ -9,8 +9,32 @@
       <link rel="stylesheet" href="/propstyle.css" />
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
+      <style>
+        .button{
+            float: left;
+        }
+        .button button {
+            background-color: transparent;
+            color: transparent;
+            border: 0px;
+            border-width: 0cap;
+        }
+        body{
+            background: url(images/Learn\ about\ P.png);
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
+            background-size: cover;
+            background-position: center;
+            background-size: cover;
+
+        }
+
+      </style>
+
 
     </head>
+
 
     <body>
         <div id = "nav-placeholder">    
@@ -22,14 +46,41 @@
         </script>
 
         
-        <h1 class="title1"> Learn about the propositions here</h1>
+        <h1 class="title1"></h1>
         <div class="button">
-            <button onclick="goToProp1()"> 1</button>
-            <button onclick="goToProp2()"> 2</button>
-            <button onclick="goToProp3()"> 3</button>
-            <button onclick="goToProp4()"> 4</button>
-            <button onclick="goToProp5()"> 5</button>
-            <button onclick="goToProp6()"> 6</button>
+            <button onclick="goToProp1()"> 
+                <img src="images/Prop1.png" alt="Image 1" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp2()">
+                <img src="images/Prop2.png" alt="Image 2" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp3()">
+                <img src="images/Prop3.png" alt="Image 3" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp4()">
+                <img src="images/Prop4.png" alt="Image 4" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp5()">
+                <img src="images/Prop5.png" alt="Image 5" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp6()">
+                <img src="images/Prop6.png" alt="Image 6" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp7()">
+                <img src="images/Prop7.png" alt="Image 7" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp8()">
+                <img src="images/Prop8.png" alt="Image 8" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp9()">
+                <img src="images/Prop9.png" alt="Image 9" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp10()">
+                <img src="images/Prop10.png" alt="Image 10" width = "100" height = "150">
+            </button>
+            <button onclick="goToProp11()">
+                <img src="images/Prop11.png" alt="Image 11" width = "100" height = "150">
+            </button>
         </div>
     <script>
         function goToProp1() {
@@ -49,6 +100,21 @@
         }
         function goToProp6() {
             window.location.href = 'prop6.html';
+        }
+        function goToProp7() {
+            window.location.href = 'prop7.html';
+        }
+        function goToProp8() {
+            window.location.href = 'prop8.html';
+        }
+        function goToProp9() {
+            window.location.href = 'prop9.html';
+        }
+        function goToProp10() {
+            window.location.href = 'prop10.html';
+        }
+        function goToProp11() {
+            window.location.href = 'prop11.html';
         }
     </script>
 
