--- a/prop1.html
+++ b/prop1.html
@@ -20,18 +20,22 @@
 
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
+          <div class = "text_pro_list">bill</div>
         </button>
 
         <button class = "vote_button_con" >
           <div class = "text_con">Cons</div>
+          <div class = "text_con_list">bill</div>
         </button>
 
         <button class = "vote_button_info" >
           <div class = "text_info_main">Main</div>
           <div class = "text_info_points">Points</div>
+          <div class = "text_info_list">yuh</div>
+          <img class="bill" src="./5b940cd2-00ec-4717-a7fc-e056ff3c8000 2.png" alt="Image">
         </button>
 
-        <img class="bill" src="./5b940cd2-00ec-4717-a7fc-e056ff3c8000 2.png">
+       
 
     </body>
 
