Add Chat with bill

--- a/directory.html
+++ b/directory.html
@@ -20,6 +20,7 @@
                 <button onclick="redirect('proposition.html')">Propositions</button>
                 <button onclick="redirect('propositionfaq.html')">Info</button>
                 <button onclick="redirect('writeletter.html')">Email</button>
+                <button onclick="redirect('chat_with_bill.html')"> Chat With Bill</button>"
             </div>
         </div>
     </div>
