--- a/chat_test.html
+++ b/chat_test.html
@@ -12,12 +12,12 @@
         <button id="generate-button">Generate</button>
     </div>
     <div id="response-container">
-        <!--Display the Response Here-->
+        <!-- Display the Response Here -->
     </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-        const apiKey = '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'; 
+        const apiKey = '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'; // Replace with your actual GPT-3 API key
         const apiUrl = 'https://api.openai.com/v1/chat/completions';
 
         const generateButton = document.getElementById('generate-button');
@@ -27,7 +27,7 @@
         generateButton.addEventListener('click', function () {
             const userPrompt = userPromptInput.value;
 
-            // Send a request to GPT
+            // Send a request to GPT-3
             fetch(apiUrl, {
                 method: 'POST',
                 headers: {
@@ -39,14 +39,14 @@
                     "messages": [
                     {
                         "role": "system",
-                        "content": "You are a helpful assistant pelican that is knowledgable about government."
+                        "content": "You are a helpful assistant at writing emails to legislatures."
                     },
                     {
                         "role": "user",
                         "content": userPrompt
                     }
                     ],
-                    max_tokens: 300 
+                    max_tokens: 300 // Adjust as needed
                 })
             })
             .then(response => {
@@ -59,9 +59,9 @@
                 if (data.choices && data.choices.length > 0) {
                     const gpt3Response = data.choices[0].message.content;
                     console.log(gpt3Response)
-                    responseContainer.innerHTML = `<p><strong>Bill Says!:</strong></p><p>${gpt3Response}</p>`;
+                    responseContainer.innerHTML = `<p><strong>GPT-3 Response:</strong></p><p>${gpt3Response}</p>`;
                 } else {
-                    throw new Error('Empty response from Bill');
+                    throw new Error('Empty response from GPT-3');
                 }
             })
             .catch(error => {
