titles for props complete

--- a/prop1.html
+++ b/prop1.html
@@ -19,8 +19,8 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
-        
+        <div class = "title_1">Prop 1</div>
+
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
           <div class = "text_pro_list">bill</div>
