--- a/prop10.html
+++ b/prop10.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_nav">California Two-Thirds Legislative Vote and Voter Approval for New or Increased Taxes Initiative</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
