--- a/prop2.html
+++ b/prop2.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 2</div>
+        <div class = "title_2">California $18 Minimum Wage Initiative</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
