--- a/prop3.html
+++ b/prop3.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 3</div>
+        <div class = "title_nav">California Employee Civil Action Law and PAGA Repeal Initiative</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
