--- a/prop4.html
+++ b/prop4.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 4</div>
+        <div class = "title_4">California Lower Supermajority Requirement to 55% for Local Special Taxes to Fund Housing and Public Infrastructure Amendment</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
