--- a/prop7.html
+++ b/prop7.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_nav">California Prohibit State Limitations on Local Rent Control Initiative</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
