--- a/prop9.html
+++ b/prop9.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_nav">California Right to Marry and Repeal Proposition 8 Amendment</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
