--- a/prop5.html
+++ b/prop5.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_nav">California Oil and Gas Well Regulations Referendum</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
