--- a/prop6.html
+++ b/prop6.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_nav">California Pandemic Early Detection and Prevention Institute Initiative</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
