--- a/prop8.html
+++ b/prop8.html
@@ -19,7 +19,7 @@
         </div>
 
 
-        <div class = "title_nav">Prop 1</div>
+        <div class = "title_8">California Remove Voter Approval Requirement for Public Low-Rent Housing Projects Amendment</div>
         
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
