--- a/chat_test.html
+++ b/chat_test.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat with Bill</title>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
+    <script>
+        $(function(){
+         $("#nav-placeholder").load("directory.html");
+        })
+     </script>
+     <div id = "nav-placeholder"> 
+     </div>
     <div>
         <label for="user-prompt">Enter your prompt:</label>
         <input type="text" id="user-prompt" placeholder="Type your prompt here">
