--- a/prop1.html
+++ b/prop1.html
@@ -6,6 +6,9 @@
       <link rel="stylesheet" href="propstyle.css">
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&display=swap" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     </head>
     
     <body>
