adding in the lists into prop 1

--- a/prop1.html
+++ b/prop1.html
@@ -26,23 +26,36 @@
 
         <button class = "vote_button_pro">
           <div class = "text_pro">Pros</div>
-          <div class = "text_pro_list">bill</div>
+          <div class = "text_pro_list"><li>Allocates annual funding to fix the mental health system, aiming to address the root cause and move people permanently off the streets and into treatment</li>
+            <li>Expands community-based mental health and addiction services</li>
+            <li>Favors treatment over incarceration for mentally ill individuals in the prison system</li>
+            <li>Allocates $1 billion to address homelessness, mental health, and substance abuse for over 10,000 homeless veterans</li>
+            </div>
         </button>
 
         <button class = "vote_button_con" >
           <div class = "text_con">Cons</div>
-          <div class = "text_con_list">bill</div>
+          <div class = "text_con_list"><li>Estimated cost of over $10 billion which may place a long-term burden on taxpayers through bond issuance</li>
+            <li>Past state actions have failed at reducing homelessness</li>
+            <li>Diverts funding from existing county level mental health services</li>
+            <li>Allocates two-thirds of funds to time-limited treatment beds rather than permanent housing</li>
+            <li>Forced treatment is ineffective and associated with higher suicide risks</li>
+            <li>Counteracts Mental Health Services Act by centralizing decision-making at state level, diminishing local control</li>
+            </div>
         </button>
 
         <button class = "vote_button_info" >
           <div class = "text_info_main">Main</div>
           <div class = "text_info_points">Points</div>
-          <div class = "text_info_list">yuh</div>
+          <div class = "text_info_list"><li>Renames the Mental Services Act to the Behavioral Health Services Act</li>
+            <li>Expands services to include substance use disorders</li>
+            <li>Requires 30% of the Behavioral Health Services Fund to be allocated to housing intervention programs</li>
+            <li>Issues $6.38 billion in bonds to fund housing for homeless individuals and veterans, especially for mental health care and drug/alcohol treatment facilities</li>
+            </div>
           <img class="bill" src="./images/5b940cd2-00ec-4717-a7fc-e056ff3c8000 2.png" alt="Image">
         </button>
 
-       
-
+      
     </body>
 
 </html>
